# selenium

./: WORKSPACE
common/devtools/chromium/v85/: BUILD.bazel
java/client/src/org/openqa/selenium/: BUILD
java/client/src/org/openqa/selenium/chrome/: BUCK  BUILD
java/client/src/org/openqa/selenium/devtools/: BUCK  CdpMessage.java  DevTools.java  ProtocolListener.java
java/client/src/org/openqa/selenium/devtools/v84/: BUILD.bazel
java/client/src/org/openqa/selenium/devtools/v85/: BUILD.bazel
java/client/src/org/openqa/selenium/edge/: BUILD
java/client/src/org/openqa/selenium/firefox/: BUILD
java/client/src/org/openqa/selenium/html5/: BUILD
java/client/src/org/openqa/selenium/ie/: BUILD
java/client/src/org/openqa/selenium/interactions/: BUILD
java/client/src/org/openqa/selenium/io/: BUILD
java/client/src/org/openqa/selenium/logging/: BUILD
java/client/src/org/openqa/selenium/mobile/: BUILD
java/client/src/org/openqa/selenium/net/: BUILD
java/client/src/org/openqa/selenium/opera/: BUILD
java/client/src/org/openqa/selenium/os/: BUILD
java/client/src/org/openqa/selenium/remote/: BUILD  BUILD.bazel
java/client/src/org/openqa/selenium/remote/codec/: AbstractHttpCommandCodec.java
java/client/src/org/openqa/selenium/remote/internal/: OkHttpClient.java
java/client/src/org/openqa/selenium/remote/protocol/: BUILD.bazel  HttpCommand.java  RetryingHandler.java
java/client/src/org/openqa/selenium/remote/protocol/common/: BUILD.bazel  CommonProtocol.java  NewSession.java
java/client/src/org/openqa/selenium/remote/protocol/w3c/: BUILD.bazel  W3CCommand.java  W3CErrors.java  W3CProtocol.java
java/client/src/org/openqa/selenium/remote/tracing/: HttpTracing.java
java/client/src/org/openqa/selenium/safari/: BUILD
java/client/src/org/openqa/selenium/support/: BUILD
java/client/test/org/openqa/selenium/devtools/: BUCK  DevToolsTest.java
java/client/test/org/openqa/selenium/remote/protocol/: BUILD.bazel  RetryingHandlerTest.java
java/server/src/org/openqa/grid/: BUILD
java/server/src/org/openqa/grid/selenium/: BUILD
java/server/src/org/openqa/selenium/events/: Event.java
java/server/src/org/openqa/selenium/events/zeromq/: BUCK  ZeroMqEventBus.java
java/server/src/org/openqa/selenium/grid/commands/: DefaultHubConfig.java  DefaultStandaloneConfig.java  Hub.java  Standalone.java  StandaloneConfig.java
java/server/src/org/openqa/selenium/grid/data/: BUILD.bazel  RetryNewSessionRequestEvent.java  Session.java  SessionEndEvent.java  SessionRequest.java  SessionRequestTags.java
java/server/src/org/openqa/selenium/grid/distributor/httpd/: DefaultDistributorConfig.java  DistributorServer.java
java/server/src/org/openqa/selenium/grid/distributor/local/: LocalDistributor.java
java/server/src/org/openqa/selenium/grid/graphql/: GraphqlHandler.java
java/server/src/org/openqa/selenium/grid/log/: LoggingOptions.java
java/server/src/org/openqa/selenium/grid/node/httpd/: DefaultNodeConfig.java  NodeServer.java
java/server/src/org/openqa/selenium/grid/node/local/: LocalNode.java  WebDriverInstance.java
java/server/src/org/openqa/selenium/grid/router/: Router.java
java/server/src/org/openqa/selenium/grid/router/httpd/: RouterServer.java
java/server/src/org/openqa/selenium/grid/server/: BaseServerFlags.java  EventOptions.java
java/server/src/org/openqa/selenium/grid/sessionmap/: SessionMap.java
java/server/src/org/openqa/selenium/grid/sessionmap/httpd/: DefaultSessionMapConfig.java  SessionMapServer.java
java/server/src/org/openqa/selenium/grid/sessionmap/local/: LocalSessionMap.java
java/server/src/org/openqa/selenium/grid/sessionqueue/: AddToSessionQueue.java  IntroduceToSessionQueue.java  NewSessionQueue.java
java/server/src/org/openqa/selenium/grid/sessionqueue/local/: LocalNewSessionQueue.java
java/server/src/org/openqa/selenium/grid/sessionqueue/remote/: RemoteNewSessionQueue.java  TraceSessionRequest.java
java/server/src/org/openqa/selenium/grid/web/: Values.java
java/server/src/org/openqa/selenium/remote/server/: BUILD
java/server/src/org/openqa/selenium/remote/server/log/: BUILD
java/server/test/org/openqa/selenium/events/: PublishTest.java
java/server/test/org/openqa/selenium/grid/: BUCK  GridTopology.java
java/server/test/org/openqa/selenium/grid/distributor/: BUCK  DistributorTest.java  SessionLifetimeTest.java
java/server/test/org/openqa/selenium/grid/distributor/local/: BUILD.bazel  LocalDistributorTest.java
java/server/test/org/openqa/selenium/grid/graphql/: GraphqlHandlerTest.java
java/server/test/org/openqa/selenium/grid/node/: NodeTest.java
java/server/test/org/openqa/selenium/grid/router/: BUCK  BUILD.bazel  EndToEndTest.java  QueuingSessionsTest.java  SessionQueueGridTest.java
java/server/test/org/openqa/selenium/grid/sessionmap/: SessionMapTest.java
java/server/test/org/openqa/selenium/grid/sessionqueue/local/: LocalNewSessionQueueTest.java
rb/: BUILD.bazel
rb/lib/: BUILD.bazel
rb/lib/selenium/webdriver/support/: cdp_client_generator.rb
scripts/: ij.bazelproject
