load("@rules_jvm_external//:defs.bzl", "artifact")

java_library(
    name = "protocol",
    srcs = glob(["*.java"]),
    deps = [
      "//java/client/src/org/openqa/selenium:core",
      "//java/client/src/org/openqa/selenium/json",
      "//java/client/src/org/openqa/selenium/remote:api",
      "//java/client/src/org/openqa/selenium/remote/http",
      artifact("net.jodah:failsafe"),
    ],
    visibility = [
      "//java/client/src/org/openqa/selenium/remote/protocol:__subpackages__",
      "//java/client/test/org/openqa/selenium/remote/protocol:__pkg__",
    ]
)
