load("@rules_jvm_external//:defs.bzl", "artifact")
load("//java:defs.bzl", "java_test_suite")

java_test_suite(
    name = "small-tests",
    srcs = glob(["*.java"]),
    size = "large",
    deps = [
        "//java/client/src/org/openqa/selenium/json",
        "//java/client/src/org/openqa/selenium/remote",
        "//java/client/src/org/openqa/selenium/remote/http",
        "//java/client/src/org/openqa/selenium/remote/protocol",
        "//java/client/src/org/openqa/selenium/remote/protocol/common",
        "//java/client/src/org/openqa/selenium/remote/protocol/w3c",
        artifact("com.google.guava:guava"),
        artifact("junit:junit"),
        artifact("org.assertj:assertj-core"),
    ]
)
