java_library(
    name = "w3c",
    srcs = glob(["*.java"]),
    deps = [
          "//java/client/src/org/openqa/selenium:core",
          "//java/client/src/org/openqa/selenium/remote:api",
          "//java/client/src/org/openqa/selenium/remote/http",
        "//java/client/src/org/openqa/selenium/json",
        "//java/client/src/org/openqa/selenium/remote/protocol",
    ],
    visibility = [
        "//java/client/test/org/openqa/selenium/remote/protocol:__pkg__",
    ]
)
